# steering-research

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  task.md  zensical.toml
.github/workflows/: ci.yml
configs/data/: latent_behavior_bench.yaml
configs/experiments/: e001_mean_direction.yaml  e002_activation_monitor.yaml  e003_sae_delta.yaml  e004_steering_eval.yaml  e005_sae_feature_steering.yaml  e006_lora_sft.yaml
configs/models/: qwen35_27b.yaml  qwen35_27b_h200_offline.yaml  qwen35_2b.yaml  qwen35_9b.yaml  qwen35_9b_h200_offline.yaml
dashboards/: app.py
data/: README.md  benchmark_card.md  research_readiness.md  review_protocol.md
data/authoring/: source_catalog.json
data/dev/: track_a_families.jsonl  track_a_items.jsonl  track_e_families.jsonl  track_e_items.jsonl
data/manifests/: candidate_manifest.json  preregistration_template.json
data/reports/: candidate_validation.json  candidate_validation.md
data/reviewer_packets/: track_a_semantic_review.csv  track_e_semantic_review.csv
data/schema/: track_a.schema.json  track_a_family.schema.json  track_e.schema.json  track_e_family.schema.json
data/validation/: track_a_families.jsonl  track_a_items.jsonl  track_e_families.jsonl  track_e_items.jsonl
docs/: ci.md  cli.md  dataset.md  datasets.md  evaluation.md  experiments.md  findings.md  getting-started.md  h200.md  index.md  methodology.md  methods.md  models.md  release-status.md  reports.md  research.md  setup.md  validation.md
ideas/: benchmark_spec.md  benchmark_v0_build_plan.md  research_program.md
presentation/: README.md  predefense.tex
runs/: dashboard.html  smoke_summary.json
runs/20260707T162101Z_smoke_qwen2b_e001_mean_direction/: manifest.json  metrics.jsonl  report.md  summary.json
runs/20260707T162112Z_smoke_qwen2b_e002_activation_monitor/: manifest.json  metrics.jsonl  report.md  summary.json
runs/20260707T162125Z_smoke_qwen2b_e003_sae_delta/: manifest.json  metrics.jsonl  report.md
runs/20260707T162134Z_smoke_qwen2b_e004_caa_steering/: aggregate.json  manifest.json  metrics.jsonl  report.md  summary.json
runs/20260707T162157Z_smoke_qwen2b_e005_sae_feature_steering/: manifest.json  metrics.jsonl  report.md  summary.json  top_sae_features.json
runs/20260707T162228Z_smoke_qwen2b_e006_lora_sft/: manifest.json  metrics.jsonl  report.md  summary.json
runs/full_qwen35_2b_cached/: dashboard.html
runs/full_qwen35_2b_final/: dashboard.html
runs/phase2_qwen35_2b/: dashboard.html
runs/phase3_qwen35_2b/: dashboard.html
runs/phase3_qwen35_2b_final/: dashboard.html
runs_full_qwen35_2b/20260707T173914Z_full_qwen35_2b_e001_mean_direction/: manifest.json
runs_full_qwen35_2b_cached/: dashboard.html
runs_full_qwen35_2b_cached/20260707T174332Z_full_qwen35_2b_e001_mean_direction/: report.md
runs_full_qwen35_2b_cached/20260707T175011Z_full_qwen35_2b_e003_sae_delta/: manifest.json
runs_full_qwen35_2b_cached/20260707T175401Z_full_qwen35_2b_e004_steering_eval/: manifest.json
runs_full_qwen35_2b_final/: dashboard.html
runs_phase2_qwen35_2b/: dashboard.html
runs_phase3_qwen35_2b_final/: dashboard.html
runs_smoke100/: dashboard.html  smoke_summary.json
runs_smoke100/20260707T162708Z_smoke_qwen2b_e001_mean_direction/: manifest.json  (+3 more)
scripts/: check_docs.py
tests/: test_benchmark_data.py  test_cli.py  test_data.py  test_methods.py  test_qwen_scope.py
(+183 files in other folders)
