[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-integrity-bench"
version = "0.1.0"
description = "A solver-backed benchmark for policy integrity under contextual pressure"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "PolicyIntegrityBench contributors" }]
keywords = [
  "agent-evaluation",
  "benchmark",
  "language-models",
  "mechanistic-interpretability",
  "sycophancy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jsonschema>=4.25",
]

[project.optional-dependencies]
model = [
  "accelerate>=1.8",
  "safetensors>=0.5",
  "torch>=2.7",
  "transformers>=4.53",
]
docs = [
  "zensical>=0.0.47",
]
dev = [
  "pre-commit>=4.5",
  "pytest>=8.4",
  "ruff>=0.12",
  "ty>=0.0.1a15",
]

[project.urls]
Documentation = "https://l1ghtsource.github.io/steering-research/"
Repository = "https://github.com/l1ghtsource/steering-research"

[project.scripts]
pib = "policy_integrity_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_integrity_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "data",
  "ideas",
  "site",
]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "PERF", "RUF", "SIM", "UP", "W"]
ignore = [
  "A003",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ty]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "ignore"
